--- a/src/select/select.html
+++ b/src/select/select.html
@@ -1,5 +1,4 @@
-<div tabindex="0"
-     *ngIf="multiple === false"
+  <div tabindex="0"
      (keyup)="mainClick($event)"
      [offClick]="clickedOutside"
      class="ui-select-container dropdown open">
@@ -10,13 +9,13 @@
           class="btn btn-default btn-secondary form-control ui-select-toggle"
           (click)="matchClick($event)"
           style="outline: 0;">
-        <span *ngIf="active.length <= 0" class="ui-select-placeholder text-muted">{{placeholder}}</span>
-        <span *ngIf="active.length > 0" class="ui-select-match-text pull-left"
-              [ngClass]="{'ui-select-allow-clear': allowClear && active.length > 0}"
-              [innerHTML]="active[0].text"></span>
+        <span *ngIf="!activeOption" class="ui-select-placeholder text-muted">{{placeholder}}</span>
+        <span *ngIf="activeOption" class="ui-select-match-text pull-left"
+              [ngClass]="{'ui-select-allow-clear': allowClear && active}"
+              [innerHTML]="getActiveSelector(activeOption)"></span>
         <i class="dropdown-toggle pull-right"></i>
         <i class="caret pull-right"></i>
-        <a *ngIf="allowClear && active.length>0" class="btn btn-xs btn-link pull-right" style="margin-right: 10px; padding: 0;" (click)="removeClick(active[0], $event)">
+        <a *ngIf="allowClear && active" class="btn btn-xs btn-link pull-right" style="margin-right: 10px; padding: 0;" (click)="removeClick(active, $event)">
            <span class="fa fa-remove"></span>
         </a>
       </span>
@@ -27,15 +26,15 @@
            [disabled]="disabled"
            class="form-control ui-select-search"
            *ngIf="inputMode"
-           placeholder="{{active.length <= 0 ? placeholder : ''}}">
+           placeholder="{{!active ? placeholder : ''}}">
      <!-- options template -->
-     <ul *ngIf="optionsOpened && items && items.length > 0"
+     <ul *ngIf="optionsOpened && options && options.length > 0"
           class="ui-select-choices dropdown-menu" role="menu">
-        <li *ngFor="let o of items" role="menuitem">
+        <li *ngFor="let o of options" role="menuitem">
           <div class="ui-select-choices-row"
                [class.active]="isActive(o)"
                (mouseenter)="selectActive(o)"
-               (click)="selectMatch(o, $event)">
+               (click)="selectMatch(o.id, $event)">
             <a href="javascript:void(0)" class="dropdown-item">
               <div [innerHtml]="o.text | highlight:inputValue"></div>
             </a>
